sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n:Int = 0;
  do {
    for (k <- 0 to getNombreValeurs()-2) {
    	if (plusPetit(k+1, k)) {
      	echange(k, k+1);
        n =+1;
      }
    }
  } while (n > 0)
}